[package]
name = "flipwire"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/liamhays/flipwire"
license = "MIT"
description = "Bluetooth app to control a Flipper Zero from a PC"

[dependencies]
btleplug = "0.11.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.4.1"
protobuf = "3.3"
futures = "0.3.28"
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"
indicatif = "0.17.7"
chrono = "0.4.31"

[build-dependencies]
protobuf-codegen = "3.3"
