[package]
name = "flipwire"
version = "0.3.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/liamhays/flipwire"
license = "MIT"
description = "Control your Flipper Zero from your PC over Bluetooth"

[dependencies]
btleplug = "0.11.5"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.7.0"
protobuf = "3.3"
futures = "0.3.30"
clap = { version = "4.5.0", features = ["derive"] }
log = "0.4.20"
pretty_env_logger = "0.5"
indicatif = "0.17.8"
chrono = "0.4.34"

[build-dependencies]
protobuf-codegen = "3.3"
